feat: 基本雏形。具有外链的使用gitbook，否则使用文件
Signed-off-by: tpout <416756910@qq.com>